--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -7,7 +7,7 @@
     <script src="<%= BASE_URL %>datafeeds/udf/dist/polyfills.js"></script>
     <script src="<%= BASE_URL %>datafeeds/udf/dist/bundle.js"></script>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Charting Library Vue.js Demo</title>
+    <title>自然之缠-量化平台</title>
   </head>
   <body>
     <noscript>
